# EigenNeuralNet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: NeuralNetwork.hpp
src/: NeuralNetwork.cpp
